fixed jumpy search bar

--- a/sass/_Add-Mode.scss
+++ b/sass/_Add-Mode.scss
@@ -8,7 +8,7 @@
       outline: none;
       border: 0;
       border-bottom: 1px solid black;
-      padding-left: 10px;
+      padding-left: 5%;
       background: #2F3132;  
     }
 
@@ -17,5 +17,6 @@
       background: #2A2B2C;  
       border: 0;
       resize: none;
+      padding: 5%;
     }
   }
