--- a/sass/_Single-Snippet.scss
+++ b/sass/_Single-Snippet.scss
@@ -1,7 +1,7 @@
 .single-snippet {
   display: flex;
   align-items: center;
-  height: 13vh;
+
   border-bottom: 1px solid black;
 
 }
@@ -19,5 +19,6 @@
     font-size: 10px;
     color: #7B7E82;
     overflow: visible;
+
   }
 }
